--- a/frontend/src/components/BlogPreview/BlogPreview.scss
+++ b/frontend/src/components/BlogPreview/BlogPreview.scss
@@ -35,6 +35,7 @@
         border-radius: 1rem;
         cursor: default;
         border: .1rem solid var(--transparency);
+        box-shadow: 0 0 1rem .5rem rgba(0, 0, 0, .05);
 
     }
 
