--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,7 @@ html {
   overflow-x: hidden;
 	/* width: 100vw; */
 	box-sizing: border-box;
+  scroll-behavior: smooth;
 	font-size: 62.5%;
 }
 
@@ -35,11 +36,9 @@ body {
   padding: 0;
   max-width: 153.6rem;
   margin: 0 auto;
-  font-family: 'SFPro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'SFPro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: var(--background-color);
   color: var(--font-color);
-
 }
 
 a {
