--- a/styles/globals.css
+++ b/styles/globals.css
@@ -135,7 +135,7 @@ hr {
 
 .nav .e {
 	transition: all 0.25s;
-	margin-right: 4rem;
+	margin-left: 4rem;
 	font-size: 1.4rem;
 	/* color: white; */
 	text-decoration: none;
@@ -304,7 +304,7 @@ hr {
 /* blogpreviewstart */
 .preview {
   max-width: 90rem;
-  margin: 20rem auto 20rem auto;
+  margin: 20rem auto 5rem auto;
 }
 
 .caption {
@@ -444,6 +444,12 @@ hr {
 /* blogindexend */
 
 /* blogpoststart */
+
+.markdown h1 {
+  font-size: 4rem;
+  margin-bottom: 3rem;
+}
+
 .markdown code {
   color: blueviolet;
   border-radius: .2rem;
@@ -515,7 +521,7 @@ hr {
   align-self: center;
   font-size: 2rem;
   width: max-content;
-  margin-right: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .footer .s:hover {
